Correct spacing issues

--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -48,7 +48,7 @@
         display: flex;
         justify-content: space-around;
         width: 10em;
-        margin: 0 2em 0 2em;
+        margin: 0 auto;
 
         a {
           color: $main-text;
